# workeranalyzer

./: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
docs/: builders.md  notification.md  report.md  sessions.md  storage.md  subtask.md  tasks.md
exemples/: loop_exemple.py  mongo_storage_example.py
tests/: test_builders_default.py  test_builders_simple.py  test_builders_union_metrics.py  test_notification.py  test_report.py  test_session.py  test_storage_local.py  test_storage_mongo.py  test_subtask.py  test_task.py
worker_analyzer/: analyzer.py  builders.py  common.py  notification.py  report.py  session.py  storage.py  subtask.py  task.py
worker_analyzer/builders/: default_metrics_builder.py  simple_metrics_builder.py
