[tool.poetry]
name = "workeranalyzer"
version = "0.1.0"
description = "Lib para monitoramento de pi"
authors = ["Claudio Vinicius Oliveira"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
astroid = "3.0.1"
black = "23.11.0"
click = "8.1.7"
colorama = "0.4.6"
dill = "0.3.7"
exceptiongroup = "1.1.3"
iniconfig = "2.0.0"
isort = "5.12.0"
mccabe = "0.7.0"
mypy-extensions = "1.0.0"
numpy = "1.26.2"
packaging = "23.2"
pandas = "2.1.3"
pathspec = "0.11.2"
platformdirs = "4.0.0"
pluggy = "1.3.0"
pylint = "3.0.2"
pytest = "7.4.3"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
six = "1.16.0"
tomli = "2.0.1"
tomlkit = "0.12.3"
typing_extensions = "4.8.0"
tzdata = "2023.3"
python-dotenv = "^1.0.0"
pymongo = {extras = ["srv"], version = "^4.6.1"}
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
